clean up, added cron, readme

--- a/.env-template
+++ b/.env-template
@@ -12,4 +12,10 @@ MN_NETWORK_ID="21337"
 TS_NETWORK_ID="21338"
 
 # Use testnet this is true, leave false for using mainnet
-USE_TESTNET="false"
+USE_TESTNET="true"
+
+# Run the check for balance adjustment every hour at the top of the hour
+# Recommended mainnet: CRON_SCHED='0 * * * *'
+# Recommended testnet: CRON_SCHED='*/1 * * * *'
+# MINUTES HOUR DayOfMonth Month DayOfWeek
+CRON_SCHED='0 * * * *'
